Fix overflowing top navbar on mobile

--- a/src/domain/header/_header-option.scss
+++ b/src/domain/header/_header-option.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   height: 60px;
-  margin-right: $spacing-m;
 
   &__label {
     margin-right: $spacing-xs;
